update yaml for existing articles to fit zod

--- a/src/content/weekly/0003.md
+++ b/src/content/weekly/0003.md
@@ -1,4 +1,9 @@
-so, we’re 2 for 4 on late posts. it’s been an alright week, i’ve been struggling with my mental health a bit as of late. i struggle a lot with working myself too hard to the point where it’s counterproductive to actually getting things done so i’ve been learning to take breaks, both for my eyes, body, and mind. 
+---
+title: 0003
+date: 2025-08-20
+---
+
+so, we’re 2 for 4 on late posts. it’s been an alright week, i’ve been struggling with my mental health a bit as of late. i struggle a lot with working myself too hard to the point where it’s counterproductive to actually getting things done so i’ve been learning to take breaks, both for my eyes, body, and mind.
 
 This week feels like it’s been an in-between week in anticipation of classes starting. Last year, I struggled with balancing my workload between classes quite a bit— something I wanted to take this summer to work on. I wanted to see if I could work on my own projects based solely on internal motivation and it was pretty challenging.
 I’ve been trying to develop some organizational skills and workflows to help me with this.
@@ -9,35 +14,35 @@ On an off day this week, I rearranged my room (for the nth time) and moved my de
 
 ![[IMG_5549.jpeg]]
 
-****
+---
 
-I’ve been thinking a lot about how I’m perceived by others and it’s been hurting my brain. I don’t tend to think about how other people think of me but I take note about how they perceive me, as contradictory as it sounds. I think about the things that they tell me, how they refer to me or think about what I say and do, which I benchmark against my own perception of myself but I don’t really dedicate thought to “what if’s.” I’ve been thinking about how I perceive myself, how I want to perceive myself and if that’s different than how I currently do, how I want others to perceive me, how I think others perceive me, and how I adjust my behavior to bring how I think others perceive me closer to what I want them to perceive me as. 
+I’ve been thinking a lot about how I’m perceived by others and it’s been hurting my brain. I don’t tend to think about how other people think of me but I take note about how they perceive me, as contradictory as it sounds. I think about the things that they tell me, how they refer to me or think about what I say and do, which I benchmark against my own perception of myself but I don’t really dedicate thought to “what if’s.” I’ve been thinking about how I perceive myself, how I want to perceive myself and if that’s different than how I currently do, how I want others to perceive me, how I think others perceive me, and how I adjust my behavior to bring how I think others perceive me closer to what I want them to perceive me as.
 
 There’s a quote that’s stuck with me (that I can’t figure out the source of for the life of me)— “I am not who I think I am. I am not who you think I am. I am who I think that you think I am.” I am not who I am because I live my life constantly surrounded by myself, overexposed to my flaws and sometimes blind to my strengths. I am not who others think I am because they are exposed to only certain sides of me, which is biased to their individual interests and what sides of me they are interested in exploring. However, I am conscious of how others perceive me in my interactions with them in those spaces and try to adjust my behavior in those situations to be the kind of person that I want to be which, in the end, is the most accurate depiction of the kind of person that I am.
 
-****
+---
 
 humanmade is not necessarily better
 
 ![[D2297B89-8D8B-40DF-BDC0-33C5AAEA9203_1_105_c.jpeg]]
 
-I think we over-value “human touch.” Humans do not innately have something in them that makes something good or well-done in the same way that AI does not change our standards of what is “good” or “beautiful.” I’m frustrated by how so many arguments against generative AI is how it lacks “the human touch”, as though if we allow the technology to exist, it will turn all that should be creative into a homogenized visual corporate noise. First of all, we’ve already been there, around 75 years ago. 
+I think we over-value “human touch.” Humans do not innately have something in them that makes something good or well-done in the same way that AI does not change our standards of what is “good” or “beautiful.” I’m frustrated by how so many arguments against generative AI is how it lacks “the human touch”, as though if we allow the technology to exist, it will turn all that should be creative into a homogenized visual corporate noise. First of all, we’ve already been there, around 75 years ago.
 
 ![[2025-08-31_17.26@2x.png]]
 
 One of the main critiques of the Swiss Style/International Style is that it was too samey. Initially, it was revolutionary for its univers(al) neutral aesthetic that could be applied to nearly anything. However, it became tiresome for the same reason— to the common person, everything looked identical, overly function and restrained from the grid, leading to an explosion of new forms of expression in New Wave, Punk, and Postmodernist design. (see: Wolfgang Weingart, David Carson, and Paula Scher)
 
-AI does not change what we find interesting, beautiful, or eye-catching. Its creations are uncanny, dishonest, shallow imitations of reality that mimic appearance without understanding meaning and culture. These were the same failings of the Swiss Style— in attempting to appeal to everyone, it lacked a human personality. However, future designers used the structure of the Swiss Style to break away and subvert it; most modern aesthetics share some heritage with it and it’s even seeing a resurgence with the web and CSS Grids (hello, brutalism). 
+AI does not change what we find interesting, beautiful, or eye-catching. Its creations are uncanny, dishonest, shallow imitations of reality that mimic appearance without understanding meaning and culture. These were the same failings of the Swiss Style— in attempting to appeal to everyone, it lacked a human personality. However, future designers used the structure of the Swiss Style to break away and subvert it; most modern aesthetics share some heritage with it and it’s even seeing a resurgence with the web and CSS Grids (hello, brutalism).
 
 > The AI is made to imitate, to produce the worst type of inauthenticity: inauthenticity which seeks profit from its claim to be authentic while taking itself deadly seriously.
-\- [Eli Beaton, “The Only Avant-Garde Position for AI Art”](https://wildflower.work/avant-garde-position-for-ai-art/)
+> \- [Eli Beaton, “The Only Avant-Garde Position for AI Art”](https://wildflower.work/avant-garde-position-for-ai-art/)
 
 ![[Pasted image 20250831181842.png]]
 [Stable Diffusion 2 Base](https://huggingface.co/stabilityai/stable-diffusion-2-base), October 2023: "A dog in the style of Picasso."
 
 However, the AI only knows how to copy what it has been fed. The fault lies not within the machine that does (or should we be suing school scanners and printers for piracy?) but the culture that rewards such behavior. In the end, the robot is only copying what we humans are already doing for hundreds of years as we copy and remix and remake until what the original’s meaning is lost, its appearance only a reference at a glance, copying for copying’s sake.
 
-*[A **rebus** riːbəs/ is a puzzle device that combines the use of illustrated pictures with individual letters to depict words or phrases.](https://en.wikipedia.org/wiki/Rebus) Over time, it has evolved from images replacing phonetic sounds to images of the word it is replacing to simply relevant imagery to accompanying a theme. In contemporary design, it has evolved to be replacement for replacement’s sake.*
+_[A **rebus** riːbəs/ is a puzzle device that combines the use of illustrated pictures with individual letters to depict words or phrases.](https://en.wikipedia.org/wiki/Rebus) Over time, it has evolved from images replacing phonetic sounds to images of the word it is replacing to simply relevant imagery to accompanying a theme. In contemporary design, it has evolved to be replacement for replacement’s sake._
 
 ![[2025-08-31_18.04@2x.png]]
 ![[2025-08-31_18.04@2x 1.png]]
@@ -48,11 +53,11 @@ However, the AI only knows how to copy what it has been fed. The fault lies not 
 ![[2025-08-31_18.06@2x.png]]
 Screenshots from [“Dead Letters”, a talk by Elizabeth Goodspeed](https://www.youtube.com/live/nDNXGLKsUuU?feature=shared&t=23976)
 
-****
+---
 
 I’m still exploring what I want this series to be. I’m really interested in having more conversations on personal use of AI, whether for work or in creative practices. I enjoy using it as a medium to share what’s been at the forefront of my mind.
 
-****
+---
 
 what i’ve been doing
 https://calciferchang.github.io/calculator/
