--- a/src/content/weekly/0007.md
+++ b/src/content/weekly/0007.md
@@ -1,3 +1,8 @@
+---
+title: 0007
+date: 2025-09-19
+---
+
 hello again, friday. it’s been a busy week and it’s hard to imagine that the week is “over” again. thing is, i don’t think it’s ever going to be less so and i don’t know if i want it to be. i think in a way, being busy and overworked has forced me to overcome many aspects of my perfectionism. as of late, i simply don’t have time to try and get everything perfect and it’s pushed me to really identify what it is that i value and am trying to achieve and finding the best way to get there. being busy and especially writing this newsletter has made me more conscious of every minute, each means more, feels more precious. i don’t have the time anymore to worry about whether or not something is good enough or not, whether i’m good enough or not, at some point, it just needs to be done.
 
 i’ve felt FOMO in the past on the things that i haven’t managed to get done or haven’t been satisfied with completing which being busy has really helped me with. i’ve been able to come to peace with the fact that i’m not going to be good enough sometimes but each time i’m learning more about what i’m not good at, which will eventually let me see improvement as i learn what i previously did not know. kind of related to my ramble from before.
