--- a/src/content/weekly/0008.md
+++ b/src/content/weekly/0008.md
@@ -1,4 +1,10 @@
+---
+title: 0008
+date: 2025-09-29
+---
+
 # 0008
+
 happy monday.
 
 ## things that happened
@@ -7,24 +13,25 @@ happy monday.
 - I’m currently learning nvim, something that’s interesting because I’ve recently written on the importance of [[sticking stock]]. There’s always been a bit of a duality in my mind— I want to use the simplest tool possible (which in this case, would probably to just use VSCode) but I’m always looking for the most efficient way to work which involves a lot of working inefficiently. Not sure how those two coexist quite yet.
 - I’m thinking about turning this website into a bit of an archive/growing repository for my thoughts and writing. A lot of what I’ve shared has been really stream of consciousness writing and I want to have something a little more structured. I imagine that this project turns into a living home of my mind where anyone can look in and see how my ideas come to be, grow, and evolve.
 - I’ve been starting to get into reading articles again— I stopped around the end of 2024 because it started making me depressed but I found that I missed the information I absorb from it. I love reading opinions & editorials, hearing others’ thoughts and perspectives, whether or not I agree with them. I’ve been reading a lot of Zeynep Tufekçi’s writing, it’s also caused an interest in studying sociology in the future. Some of my favorite recent reads by her:
-    - [The A.O.C. Deepfake Was Terrible. The Proposed Solution Is Delusional.](https://www.nytimes.com/2025/08/11/opinion/alexandria-ocasio-cortez-deepfake-ai.html) How “critical thinking” alone is not the solution to AI.
-    - [Social Media Reduced Two Horrific Killings to Cheap Snuff Films](https://www.nytimes.com/2025/09/13/opinion/the-flood-of-moment-of-death-videos-is-killing-us.html) Is social media desensitizing us to horrific events?
-    - [For One Hilarious, Terrifying Day, Elon Musk’s Chatbot Lost Its Mind](https://www.nytimes.com/2025/05/17/opinion/grok-ai-musk-x-south-africa.html)
-    - [The Rage and Glee That Followed a C.E.O.’s Killing Should Ring All Alarms](https://www.nytimes.com/2024/12/06/opinion/united-health-care-ceo-shooting.html)
-      I keep rereading and resharing. I feel it keeps being relevant.
+  - [The A.O.C. Deepfake Was Terrible. The Proposed Solution Is Delusional.](https://www.nytimes.com/2025/08/11/opinion/alexandria-ocasio-cortez-deepfake-ai.html) How “critical thinking” alone is not the solution to AI.
+  - [Social Media Reduced Two Horrific Killings to Cheap Snuff Films](https://www.nytimes.com/2025/09/13/opinion/the-flood-of-moment-of-death-videos-is-killing-us.html) Is social media desensitizing us to horrific events?
+  - [For One Hilarious, Terrifying Day, Elon Musk’s Chatbot Lost Its Mind](https://www.nytimes.com/2025/05/17/opinion/grok-ai-musk-x-south-africa.html)
+  - [The Rage and Glee That Followed a C.E.O.’s Killing Should Ring All Alarms](https://www.nytimes.com/2024/12/06/opinion/united-health-care-ceo-shooting.html)
+    I keep rereading and resharing. I feel it keeps being relevant.
 - I’ve been thinking a lot about the role of AI in education. As someone who is self-taught in many areas of life, AI has been invaluable in making learning more accessible. However, I am not blind to how it is effectively a cheat code for many. I feel like there’s a connection to how [digital literacy is in decline](https://www.edweek.org/technology/u-s-students-computer-literacy-performance-drops/2024/12) [(along with literacy in general)](https://news.harvard.edu/gazette/story/2025/09/whats-driving-decline-in-u-s-literacy-rates/)
 - [Photos from my photography class](https://drive.google.com/drive/folders/1tf6BxHtojY36cFDhVmGK18onPmYJeRn_?usp=sharing). I’m planning to have a section of this for projects where I can capture things I’m working on continuously but that’s still very much WIP.
 
 ## thoughts
 
 - [[Stop looking for perfect people]]
-- Thinking about writing an article on why everyone should write their own weekly. Or at least, something similar to help us be more grounded as time passes.    
+- Thinking about writing an article on why everyone should write their own weekly. Or at least, something similar to help us be more grounded as time passes.
 
 ## some links for you:
+
 - [Obsidian’s CEO on why productivity tools need community more than AI](https://www.theverge.com/decoder-podcast-with-nilay-patel/760522/obsidian-ceo-steph-ango-kepano-productivity-software-notes-app)
 - [Maya Man on Instagram: "𝓉𝓌𝑒𝓃𝓉𝓎𝓃𝒾𝓃𝑒, made in collaboration with @beepybella, is a mini one-off “magazine” featuring only advertisements with all images created with fine-tuned models I trained on images of me and @isabellalalonde and select text excerpts from the original prompts that generated each image.](https://www.instagram.com/mayaontheinternet/p/DOEjB6MEYhm/?img_index=9)
 - [Web Design - The First 100 Years](https://web.archive.org/web/20150721024810/http://idlewords.com/talks/web_design_first_100_years.htm#expand)
-  An article from 2014 on what comes next. More than a little prophetic.  
+  An article from 2014 on what comes next. More than a little prophetic.
 - [Why is China’s Gen Z Turning Themselves Into Collectible “Guzis”?](https://radii.co/article/china-gen-z-turning-themselves-into-collectible-guzi)
 - [30 minutes with a stranger](https://pudding.cool/2025/06/hello-stranger)
   A data visualization from a [2023 study](https://www.science.org/doi/10.1126/sciadv.adf3197): Watch hundreds of strangers talk for 30 minutes, and track how their moods change.
