fix encoding & config

--- a/src/content/weekly/0001.md
+++ b/src/content/weekly/0001.md
@@ -1,28 +1,33 @@
 ---
+title: "0001"
 date: 2025-08-06
 ---
-# *what i’ve been thinking*
-recently, i’ve been obsessed with understanding the different ways we express ourselves, particularly in how we spend our resources whether that be time, money, or even just attention. in myself, i’ve been thinking about what i dedicate my time to, how much of it, and how ‘deeply’ i spend that time. even just writing this piece, i wonder what that reflects about myself. 
 
-i feel like in general, i struggle to vocalize the traits that make me distinct; it wasn’t until someone commented on my “trademark sarcasm” that this whole train of thought started. i admire people who can, or at least those who have a more focused definition of themselves. for example, [naz hamid’s modus operandi](https://nazhamid.com/journal/modus-operandi/) or [adam parkzer’s short about me](https://parkzer.com/). 
+# _what i’ve been thinking_
 
-part of the admiration comes from their transparency; one of my current grievances with digital communications is how it feels people’s digital personas differ so drastically from their physical ones. the most prominent examples to me are (1) gaming, which is notorious for this, with anonymity allowing strangers to liberated to be their worst selves and  [LinkedIn](https://www.linkedin.com/) (which ironically, has the entirely opposite identity dynamic), where people create hyper-curated versions of themselves for personal gain. on a tangent, it’s amusing to me that with llms, the platform edges ever closer to the [dead internet theory](https://en.wikipedia.org/wiki/Dead_Internet_theory) (though don’t get me started on how chatgpt ruined the em dash).
+recently, i’ve been obsessed with understanding the different ways we express ourselves, particularly in how we spend our resources whether that be time, money, or even just attention. in myself, i’ve been thinking about what i dedicate my time to, how much of it, and how ‘deeply’ i spend that time. even just writing this piece, i wonder what that reflects about myself.
 
+i feel like in general, i struggle to vocalize the traits that make me distinct; it wasn’t until someone commented on my “trademark sarcasm” that this whole train of thought started. i admire people who can, or at least those who have a more focused definition of themselves. for example, [naz hamid’s modus operandi](https://nazhamid.com/journal/modus-operandi/) or [adam parkzer’s short about me](https://parkzer.com/).
 
-# *what i’ve been doing*
+part of the admiration comes from their transparency; one of my current grievances with digital communications is how it feels people’s digital personas differ so drastically from their physical ones. the most prominent examples to me are (1) gaming, which is notorious for this, with anonymity allowing strangers to liberated to be their worst selves and [LinkedIn](https://www.linkedin.com/) (which ironically, has the entirely opposite identity dynamic), where people create hyper-curated versions of themselves for personal gain. on a tangent, it’s amusing to me that with llms, the platform edges ever closer to the [dead internet theory](https://en.wikipedia.org/wiki/Dead_Internet_theory) (though don’t get me started on how chatgpt ruined the em dash).
+
+# _what i’ve been doing_
+
 soldering has allowed me to rediscover my love for building keyboards. here’s the most recent one i’ve done that was both my favorite (currently typing on it!) and also the most painful, being bluetooth. funnily, soldering the battery was the most straightforward part of it all.
 
 ![[IMG_5294.jpeg]]
 
 aside from that, i’ve been getting back into coding after a long break (i started teaching myself like two years ago and only just getting back into it…), reading more, and playing teamfight tactics.
 
-# *what i’m (currently) reading*
-*DO/DISRUPT* by Mark Shayler
-*Designing Japan* by Kenya Hara
-*What Artists Wear* by Charlie Porter (which partially inspired my thoughts above)
-*Seventy-nine Short Essays on Design* by Michael Beirut
+# _what i’m (currently) reading_
 
-# *wayside flowers*
+_DO/DISRUPT_ by Mark Shayler
+_Designing Japan_ by Kenya Hara
+_What Artists Wear_ by Charlie Porter (which partially inspired my thoughts above)
+_Seventy-nine Short Essays on Design_ by Michael Beirut
+
+# _wayside flowers_
+
 things i’ve come across that you might enjoy
 
 - [Monokai: a trip through Japan](https://monokai.nl/2019/japan/): a beautiful visual experience created to showcase photos from a trip in Japan.
